# is3g

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  minimal_example.ipynb  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: pypi.yml
_tools/: edges.py
examples/: data.csv  minimal_example.ipynb  test_.ipynb
is3g/: __init__.py  __main__.py  is3g.py
is3g/_knn_tools/: draw_polygons.py  edges.py  linalg.py  mutshed.py
isseg/: __init__.py  __main__.py  best-model.pt  isseg.py
isseg/.ipynb_checkpoints/: minimal_example-checkpoint.ipynb
isseg/_knn_tools/: _debug.py  edges.py  linalg.py  mutshed.py
