[metadata]
name = isseg
version = attr: isseg.__version__
author = Axel Andersson, Andrea Behanova
author_email = axel.andersson@it.uu.se
url = https://github.com/wahlby-lab/isseg/
description = isseg implementation in Python
long_description = file: README.md
long_description_content_type = text/markdown
keywords = , watershed, mutex, watershed
license = BSD 3-Clause License
classifiers =
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3

[options]
packages = find:
zip_safe = True
include_package_data = False
install_requires =
    mutshed
    numpy
    tqdm
    numpy
    matplotlib
    scipy
    seaborn

[options.entry_points]
console_scripts = 
    isseg = isseg.isseg_module:main

[options.extras_require]
notebook = jupyter>=1.0.0, matplotlib
dev = 
    black==22.1.0
    flake8==4.0.1
