[metadata]
name = isseg
version = attr: isseg.__version__
author = Axel Andersson, Andrea Behanova
author_email = axel.andersson@it.uu.se
url = https://github.com/wahlby-lab/isseg/
description = isseg implementation in Python
long_description = file: README.md
long_description_content_type = text/markdown
keywords = isseg, watershed, mutex
license = BSD 3-Clause License
license_files = LICENSE
classifiers =
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3

[options]
packages = find:
install_requires =
    # mutshed
    numpy
    types-tqdm
    matplotlib
    scipy
    scikit-learn
    seaborn
    click
python_requires = >=3.7

[options.entry_points]
console_scripts =
    isseg = isseg.__main__:main
