[metadata]
name = is3g
version = attr: is3g.__version__
author = Axel Andersson, Andrea Behanova
author_email = axel.andersson@it.uu.se
url = https://github.com/wahlby-lab/is3g/
description = is3g implementation in Python
long_description = file: README.md
long_description_content_type = text/markdown
keywords = is3g, watershed, mutex
license = BSD 3-Clause License
license_files = LICENSE
classifiers =
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3

[options]
packages = find:
install_requires =
    # mutshed
    click
    numpy
    pandas
    scikit-learn
    scipy
    torch
    tqdm
python_requires = >=3.7

[options.entry_points]
console_scripts =
    is3g = is3g.__main__:main
